Closed
Bug 2022547
Opened 4 months ago
Closed 4 months ago
Copy Link to Highlight is disabled for certain selections
Categories
(Firefox :: Menus, defect)
Tracking
()
VERIFIED
FIXED
150 Branch
People
(Reporter: ltenenbaum, Assigned: ltenenbaum)
Details
Attachments
(2 files)
Steps to reproduce:
- Open attached file
- Select the first two sentences ("Lorem ... commodo consequat.") including the period at the end
- Right-click to open the context menu
Expected behavior:
The option for "Copy Link to Highlight" is available
Actual behavior:
The option for "Copy Link to Highlight" is grayed out and cannot be selected
Interestingly, this bug doesn't happen when you select just the first sentence.
| Assignee | ||
Comment 1•4 months ago
|
||
Pushed by ltenenbaum@mozilla.com:
https://github.com/mozilla-firefox/firefox/commit/c4449b13c372
https://hg.mozilla.org/integration/autoland/rev/a578150d5935
Fix "Copy Link to Highlight" for long selection ending in punctuation. r=jjaschke
Status: ASSIGNED → RESOLVED
Closed: 4 months ago
Resolution: --- → FIXED
Target Milestone: --- → 150 Branch
Updated•4 months ago
|
QA Whiteboard: [qa-triage-done-c151/b150][qa-ver-needed-c151/b150]
Flags: qe-verify+
Updated•4 months ago
|
QA Contact: oardelean
Comment 4•4 months ago
|
||
Reproducible on a 2026-03-11 Firefox Nightly build on Windows 10.
Verified as fixed on Firefox Nightly 151.0a1 and Firefox 150.0b1 on Windows 10, Ubuntu 22, macOS 15.
Status: RESOLVED → VERIFIED
QA Whiteboard: [qa-triage-done-c151/b150][qa-ver-needed-c151/b150] → [qa-triage-done-c151/b150][qa-ver-done-c151/b150]
status-firefox151:
--- → verified
Flags: qe-verify+
You need to log in
before you can comment on or make changes to this bug.
Description
•