Bug 2022547 - Fix "Copy Link to Highlight" for long selection ending in punctuation. r=jjaschke

Differential Revision: https://phabricator.services.mozilla.com/D287222